--- a/cog.yaml
+++ b/cog.yaml
@@ -16,6 +16,14 @@ build:
 
   python_requirements: requirements.txt
 
+  run:
+  - pip install -v -e third-party/ViTPose
+  - cd third-party/DPVO
+  - wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
+  - unzip eigen-3.4.0.zip -d thirdparty && rm -rf eigen-3.4.0.zip
+  - pip install .
+
+
 image: "r8.im/jlnk03/wham"
 
   # a list of packages in the format <package-name>==<version>
@@ -25,12 +33,12 @@ image: "r8.im/jlnk03/wham"
     # - "torchvision==0.9.0"
   
   # commands run after the environment is setup
-  run:
-    - pip install -v -e third-party/ViTPose
-    - cd third-party/DPVO
-    - wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
-    - unzip eigen-3.4.0.zip -d thirdparty && rm -rf eigen-3.4.0.zip
-    - pip install .
+  # run:
+  #   - pip install -v -e third-party/ViTPose
+  #   - cd third-party/DPVO
+  #   - wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
+  #   - unzip eigen-3.4.0.zip -d thirdparty && rm -rf eigen-3.4.0.zip
+  #   - pip install .
     # - "echo env is ready!"
     # - "echo another command if needed"
 
