--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,5 @@ setuptools==59.5.0
 tqdm
 ultralytics
 gdown==4.6.0
+git+https://github.com/ViTAE-Transformer/ViTPose.git
+git+https://github.com/princeton-vl/DPVO.git
